# GCPAgent

./: README.md  env_template_gcp.txt  main.py  main_gcp.py  main_with_sudo.py  manager.py  manager_gcp.py  models.py  models_gcp.py  requirements.txt  requirements_gcp.txt  simple_main.py  streamlit_app.py  streamlit_app_gcp.py  test_agents.py  tracing.py  tracing_adk.py
gcp_agents/: __init__.py  kid_friendly_agent_gcp.py  recommender_agent_gcp.py  search_agent_gcp.py  weather_agent_gcp.py
mcp_server_weather/: Dockerfile  README.md  pyproject.toml
mcp_server_weather/src/mcp_server_weather/: __init__.py  __main__.py  server.py
my_agents/: __init__.py  kid_friendly_agent.py  recommender_agent.py  search_agent.py  weather_agent.py
tools/: context_tools.py
